[gd_scene load_steps=3 format=3 uid="uid://g018ihvtkry2"]

[ext_resource type="Script" path="res://starting_folder/options_operating.gd" id="1_48moy"]

[sub_resource type="FontFile" id="FontFile_qrldm"]
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="options_operating" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 5.0
offset_right = 12.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_48moy")

[node name="Title of Scene" type="MarginContainer" parent="."]
layout_mode = 2
anchor_left = 0.164059
anchor_top = 0.0200674
anchor_right = 0.164059
anchor_bottom = 0.0200674
offset_left = 12.0037
offset_top = 11.9963
offset_right = 312.004
offset_bottom = 125.996
scale = Vector2(2.23397, 3.39237)
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Title of Scene"]
layout_mode = 2

[node name="Label" type="Label" parent="Title of Scene/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.101961, 0.784314, 0.0509804, 1)
theme_override_colors/font_outline_color = Color(0.189561, 0.779758, 0.729694, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = SubResource("FontFile_qrldm")
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
horizontal_alignment = 1

[node name="Back to main menu" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 332.0
offset_top = 556.0
offset_right = 490.0
offset_bottom = 597.0
scale = Vector2(2.72141, 1.36344)

[node name="VBoxContainer" type="VBoxContainer" parent="Back to main menu"]
layout_mode = 2

[node name="Back" type="Button" parent="Back to main menu/VBoxContainer"]
layout_mode = 2
text = "Back to main menu
"

[node name="Import your Agent" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 496.0
offset_right = 497.0
offset_bottom = 536.0
scale = Vector2(2.72141, 1.36344)

[node name="VBoxContainer" type="VBoxContainer" parent="Import your Agent"]
layout_mode = 2

[node name="Import" type="Button" parent="Import your Agent/VBoxContainer"]
layout_mode = 2
text = "Import a new Agent
"

[node name="Planet choices" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 804.0
offset_top = 53.0
offset_right = 937.0
offset_bottom = 97.0
scale = Vector2(2.12324, 2.23022)

[node name="VBoxContainer" type="VBoxContainer" parent="Planet choices"]
layout_mode = 2

[node name="Label" type="Label" parent="Planet choices/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.784314, 0.0666667, 0.470588, 1)
theme_override_colors/font_outline_color = Color(0.189561, 0.779758, 0.729694, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = SubResource("FontFile_qrldm")
theme_override_font_sizes/font_size = 32
text = "Planet 
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Earth" type="Button" parent="Planet choices/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.227451, 0.360784, 0.796078, 1)
text = "Earth"

[node name="Moon" type="Button" parent="Planet choices/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.680321, 0.680321, 0.680321, 1)
text = "Moon"

[node name="Mars" type="Button" parent="Planet choices/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.124572, 0.0864938, 1)
text = "Mars"

[node name="Venus" type="Button" parent="Planet choices/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.803922, 0.0901961, 1)
text = "Venus"

[node name="Env Options" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 54.0
offset_right = 96.0
offset_bottom = 94.0
scale = Vector2(1.71595, 1.93001)

[node name="VBoxContainer" type="VBoxContainer" parent="Env Options"]
layout_mode = 2

[node name="Environment" type="Label" parent="Env Options/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.972549, 0, 1)
text = "Environment
Options"
horizontal_alignment = 1

[node name="Mountain" type="Button" parent="Env Options/VBoxContainer"]
layout_mode = 2
text = "Terrain Mesh"

[node name="Wind Sheer" type="Button" parent="Env Options/VBoxContainer"]
layout_mode = 2
text = "Wind Sheer"

[node name="Launch Site" type="Button" parent="Env Options/VBoxContainer"]
layout_mode = 2
text = "Launch Site"

[node name="Target Site" type="Button" parent="Env Options/VBoxContainer"]
layout_mode = 2
text = "Target Site (x,1,z):"

[node name="TargetEdit_x" type="LineEdit" parent="Env Options/VBoxContainer/Target Site"]
layout_mode = 0
offset_left = 156.0
offset_top = 3.0
offset_right = 239.063
offset_bottom = 35.0
tooltip_text = "only enter integers"
clear_button_enabled = true

[node name="TargetEdit_z" type="LineEdit" parent="Env Options/VBoxContainer/Target Site"]
layout_mode = 0
offset_left = 250.007
offset_top = 3.13907
offset_right = 333.07
offset_bottom = 35.1391
tooltip_text = "only enter integers"
clear_button_enabled = true

[node name="Rocket Mass" type="Button" parent="Env Options/VBoxContainer"]
layout_mode = 2
text = "Rocket Mass"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="Back to main menu/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Import your Agent/VBoxContainer/Import" to="." method="_on_import_pressed"]
[connection signal="pressed" from="Planet choices/VBoxContainer/Earth" to="." method="_on_earth_pressed"]
[connection signal="pressed" from="Planet choices/VBoxContainer/Moon" to="." method="_on_moon_pressed"]
[connection signal="pressed" from="Planet choices/VBoxContainer/Mars" to="." method="_on_mars_pressed"]
[connection signal="pressed" from="Planet choices/VBoxContainer/Venus" to="." method="_on_venus_pressed"]
[connection signal="pressed" from="Env Options/VBoxContainer/Mountain" to="." method="_on_mountain_pressed"]
[connection signal="pressed" from="Env Options/VBoxContainer/Wind Sheer" to="." method="_on_wind_sheer_pressed"]
[connection signal="pressed" from="Env Options/VBoxContainer/Launch Site" to="." method="_on_launch_site_pressed"]
[connection signal="pressed" from="Env Options/VBoxContainer/Target Site" to="." method="_on_target_site_pressed"]
[connection signal="text_submitted" from="Env Options/VBoxContainer/Target Site/TargetEdit_x" to="." method="_on_target_edit_text_submitted"]
[connection signal="text_submitted" from="Env Options/VBoxContainer/Target Site/TargetEdit_z" to="." method="_on_target_edit_z_text_submitted"]
[connection signal="pressed" from="Env Options/VBoxContainer/Rocket Mass" to="." method="_on_rocket_mass_pressed"]
